--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,6 +23,11 @@ linter:
   rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
-
+    # Encourage adding const where possible and removing unnecessary const.
+    - prefer_const_constructors
+    - prefer_const_constructors_in_immutables
+    - prefer_const_declarations
+    - prefer_const_literals_to_create_immutables
+    - unnecessary_const
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
